Fix dark mode for beyond

--- a/src/css/games/beyond.less
+++ b/src/css/games/beyond.less
@@ -13,10 +13,14 @@ html[data-theme=dark].byd-playmat-2 .byd-player-area.whiteblock {
 html[data-theme=dark] {
 	#overall-content:before {
 		content: "";
-		background: #00000060;
+		background: #00000080;
 		position: absolute;
 		width: 100%;
 		height: 100%;
+	}
+
+	#bga-zoom-controls {
+		filter: invert(0.9);
 	}
 
 	.byd-card.byd-icon {
@@ -25,5 +29,18 @@ html[data-theme=dark] {
 
 	.byd-token-img {
 		border-radius: 1px;
+	}
+
+	.byd-player-table .byd-card-slot {
+		background-color: var(--dark-back);
+		outline: 1px solid var(--light-50);
+	}
+
+	.byd-player-area {
+		outline-color: var(--light-50);
+	}
+
+	.byd-card-img {
+		filter: var(--ext-bright);
 	}
 }
